deploy/deployments.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: crudpgfastapi-deployment
  namespace: teste
  labels:
    app: crudpgfastapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crudpgfastapi
  template:
    metadata:
      labels:
        app: crudpgfastapi
    spec:
      containers:
        - name: crudpgfastapi
          image: tiagobarbano/crudpgfastapi:latest
          ports:
            - containerPort: 8001
