deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crudpgfastapi-ingress
  namespace: teste
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
  #  nginx.ingress.kubernetes.io/ssl-redirect: "true"  
spec:
  rules:
  - host: teste.crud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crudpgfastapi
            port:
              number: 80
